netopeerangular: dropdown z-index fix

--- a/src/FIT/Bundle/ModuleDefaultBundle/Resources/public/netopeerangular/css/sass/screen.scss
+++ b/src/FIT/Bundle/ModuleDefaultBundle/Resources/public/netopeerangular/css/sass/screen.scss
@@ -69,7 +69,7 @@ $fa-font-path: "../netopeer-gui/bundles/fitmoduledefault/netopeerangular/css/fon
 
 .jsonView {
 	.block { clear: both; display: block; margin-top: 0.5em; margin-bottom: 0.5em; }
-	.block, .arrayItem { position: relative; z-index: 1;
+	.block, .arrayItem { /*position: relative; z-index: 1;*/
 		&:before { content: ""; position: absolute; left: -100%; right: 0; padding: 3px 0px;
 			margin-top: -3px; height: 14px; z-index: 0; }
 		//> * { position: static; z-index: 2; }
@@ -94,7 +94,7 @@ $fa-font-path: "../netopeer-gui/bundles/fitmoduledefault/netopeerangular/css/fon
 	}
 	//ol.arrayOl { margin: 0; padding-left: 20px; }
 	li {clear: both; min-height: 26px; }
-	ol.listOl > .arrayItem { list-style: none !important; }
+	ol.listOl > .arrayItem, ul.dropdown-menu li { list-style: none !important; }
 	ol.arrayOl, ol.listOl {
 		.toggle-control { margin-left: -20px; top: 1.3em; display: none; }
 		//.fa-minus-square-o { top: 7px; }
@@ -106,11 +106,14 @@ $fa-font-path: "../netopeer-gui/bundles/fitmoduledefault/netopeerangular/css/fon
 			input { font-style: normal; }
 		}
 		ol.arrayOl, ol.listOl { margin-top: 0.5em;
-			&, & + add-item .block { margin-left: 25px; }
+			& + add-item .block { margin-left: 25px; }
 		}
 	}
 	li {
 		select, button { font-style: normal;}
+	}
+	ol.listOl {
+		> li + li { border-top: 1px dotted #ccc; padding-top: 1em; }
 	}
 	ol.arrayOl, ol.listOl {
 		li *:not(.btn):not(.jsonItemDesc):not(.tooltip-inner) { color: black; }
